--- a/style.css
+++ b/style.css
@@ -30,14 +30,22 @@ body{
 }
 .chat{
   height: 481px;
+  overflow-y: scroll;
 }
 p{
   font-size: 14px;
   font-weight: 400;
+  display: flex;
+  flex-wrap: wrap;
 }
 .chat div{
-  height: auto;
+  max-width: 400px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
   padding: 10px;
+  border-radius: 2px;
+  margin-bottom: 4px;
 }
 .caixaMensagem{
   height: 80px;
@@ -58,10 +66,31 @@ p{
 input{
   height: 30px;
   border: none;
+  font-size: 18px;
+  font-weight: 400;
+  color: #000000;
+}
+textarea:focus, input:focus, select:focus {
+  outline: 0;
 }
 input::-webkit-input-placeholder{
   color: #000000;
   font-size: 18px;
   font-style: italic;
   font-weight: 400;
+}
+.status{
+  background-color: #DCDCDC;
+}
+.message{
+  background-color: #FFFFFF;
+}
+.private_message{
+  background-color: #FFDEDE;
+}
+strong{
+  font-weight: 700;
+}
+span{
+  color: #afaeac;
 }
