--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@ body{
   justify-content: center;
   align-items: center;
 }
+h6{
+  display: inline-block;
+  color: #505050;
+  font-size: 14px;
+}
+.teste{
+  cursor: default;
+}
 .centralizar{
   display: flex;
   justify-content: center;
@@ -93,20 +101,23 @@ h2{
   height: 100vh;
   z-index: 1;
   display: flex;
-  -webkit-transition: max-width .5s linear; 
-  -moz-transition: max-width .5s linear; 
-  -ms-transition: max-width .5s linear; 
-  -o-transition: max-width .5s linear; 
-  transition: max-width .5s linear;
 }
-.menu.escondido {
+.transicao{
+  -webkit-transition: max-width 1s linear; 
+  -moz-transition: max-width 1s linear; 
+  -ms-transition: max-width 1s linear; 
+  -o-transition: max-width 1s linear; 
+  transition: max-width 1s linear;
+}
+.menu.escondido.transicao, .tela1.escondido.transicao, .tela2.escondido.transicao {
   max-width: 0px;
   pointer-events: none;
 }
-.selecionado{
+.selecionado1, .selecionado2{
   display: flex;
 }
 .tela1{
+  display: flex;
   max-width: 125px;
   width: 100%;
   height: 100vh;
@@ -131,6 +142,7 @@ h2{
   height: 5.39vh;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .tela2 ion-icon{
   height: 25px;
@@ -143,6 +155,7 @@ h2{
   width: 100%;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 .contatos{
   height: auto;
@@ -215,10 +228,12 @@ p{
   background-color: #FFFFFF;
 }
 .caixaMensagem > div{
+  padding: 0 17px;
+}
+.ajustesNaCaixa{
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  padding: 0 17px;
 }
 .caixaMensagem ion-icon{
   height: 26px;
