--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ h2{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
 }
 .tela2 ion-icon{
   height: 25px;
